--- a/Sobre Mim.html
+++ b/Sobre Mim.html
@@ -25,10 +25,10 @@
         </div>
         <div class="container2">
             <div class="imagem1">
-              <img src="infos.jpg">
+              <img src="imagens/infos.jpg">
             </div>
             <div class="imagem2">
-              <img src="falecidos.jpg">
+              <img src="imagens/falecidos.jpg">
             </div>
         </div>
   </main>
@@ -36,3 +36,4 @@
         <div class="rodape"></div>
     </footer>
 </body>
+
