--- a/artephy.html
+++ b/artephy.html
@@ -25,7 +25,7 @@
         </div>
                 <p>Projeto desenvolvido em grupo que consiste em mostrar como a arte digital abre caminhos para a criações artísticas de maneiras totalmente novas junto com o auxílio de ferramentas de edição de imagens. (js/html/css)</p>
         <div class="imagensprojetos">
-            <img src="artephy.png">
+            <img src="imagens/artephy.png">
         </div>
     </div>
   </main>
@@ -33,3 +33,4 @@
         <div class="rodape"></div>
     </footer>
 </body>
+
