--- a/habilidades.html
+++ b/habilidades.html
@@ -24,19 +24,19 @@
       <p>Linguagens as quais tenho maior familiaridade:</p>
       <div class="habilidade1">
         <div class="habilidade11">
-          <img src="python.jpg">
+          <img src="imagens/python.jpg">
           <p>python</p>
         </div>
         <div class="habilidade11">
-          <img src="js.png">
+          <img src="imagens/js.png">
           <p>java script</p>
         </div>
         <div class="habilidade11">
-          <img src="html.png">
+          <img src="imagens/html.png">
           <p>html</p>
         </div>
         <div class="habilidade11">
-          <img src="css.png">
+          <img src="imagens/css.png">
           <p>css</p>
         </div>
       </div>
@@ -53,3 +53,4 @@
         <div class="rodape"></div>
     </footer>
 </body>
+
