--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
       </div>
       </div>
       <div class="imagemindex">
-      <img src="perfil.jpg">
+      <img src="imagens/perfil.jpg">
       </div>
     </div>
   </main>
   <footer>
         <div class="rodape"></div>
     </footer>
+
 </body>
