--- a/pportifolio.html
+++ b/pportifolio.html
@@ -25,7 +25,7 @@
         </div>
                 <p>Projeto desenvolvido individualmente com o objetivo de criar um site descritivo para perfil próprio. (html/css)</p>
         <div class="imagensprojetos">
-            <img src="portifolio.png">
+            <img src="imagens/portifolio.png">
         </div>
     </div>
   </main>
@@ -33,3 +33,4 @@
         <div class="rodape"></div>
     </footer>
 </body>
+
