--- a/projetos.html
+++ b/projetos.html
@@ -31,7 +31,7 @@
                      <a href="timeattack.html"><h1>TimeAttack</h1></a>
                     </div>
                     <p>Reforma do site time attack.</p>
-                    <img src="timeattack.png">
+                    <img src="imagens/timeattack.png">
                     <p>html/css</p>
                 </div>
                 <div class="projeto2">
@@ -39,21 +39,22 @@
                      <a href="artephy.html"><h1>Artephy</h1></a>
                     </div>
                     <p>Editor de imagens.</p>
-                    <img src="artephy.png">
+                    <img src="imagens/artephy.png">
                     <p>js/html/css</p>
-                </div><div class="projeto3">
+                </div>
+                <div class="projeto3">
                     <div class="linkado">
                      <a href="sudoku.html"><h1>Sudoku</h1></a>
                     </div>
                     <p>Jogo do sudoku em python</p>
-                    <img src="sudoku.png">
+                    <img src="imagens/sudoku.png">
                     <p>python</p>
                 </div><div class="projeto4">
                     <div class="linkado">
                      <a href="pportifolio.html"><h1>Portifólio</h1></a>
                     </div>
                     <p>Criação do meu Portifólio</p>
-                    <img src="portifolio.png">
+                    <img src="imagens/portifolio.png">
                     <p>html/css</p>
                 </div>
             </div>
@@ -65,3 +66,4 @@
         </div>
     </footer>
 </body>
+
