--- a/sudoku.html
+++ b/sudoku.html
@@ -25,7 +25,7 @@
         </div>
                 <p>Projeto desenvolvido individualmente com o objetivo de criar um jogo sudoku sem utilização de pygame. (python)</p>
         <div class="imagensprojetos">
-            <img src="sudoku.png">
+            <img src="imagens/sudoku.png">
         </div>
     </div>
   </main>
@@ -33,3 +33,4 @@
         <div class="rodape"></div>
     </footer>
 </body>
+
