--- a/timeattack.html
+++ b/timeattack.html
@@ -25,7 +25,7 @@
         </div>
                 <p>Projeto desenvolvido individualmente em aula de desenvolvimento web com o objetivo de melhorar o site TimeAttack. (html/css)</p>
         <div class="imagensprojetos">
-            <img src="timeattack.png">
+            <img src="imagens/timeattack.png">
         </div>
     </div>
   </main>
@@ -33,3 +33,4 @@
         <div class="rodape"></div>
     </footer>
 </body>
+
