--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
       <p>Deseja comprometimento e realização?</p>
       <div class="linkado">
-        <a href="projetos.html #rodape-id">Entre em contato</a>
+        <a href="projetos.html" id="rodape-id">Entre em contato</a>
       </div>
       </div>
       <div class="imagemindex">
@@ -40,3 +40,4 @@
     </footer>
 
 </body>
+
